# py-ballisticcalc

./: .coverage  .coveragerc  .env  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .pybc-template.toml  .pybc.toml  .pylintrc  404.html  AGENTS.md  Atmosphere.go  BACKLOG.md  CHANGELOG.md  CNAME  Drag.go  Example.ipynb  ExtremeExamples.ipynb  MANIFEST.in  Makefile  Manifest.in  Projectile.go  README.md  ShotParameters.go  TrajectoryCalculator.go  TrajectoryData.go  UsageDemo.ipynb  Weapon.go  Wind.go  atmosphere.py  compile.py  cvector.cp39-win_amd64.pyd  cythonization.html  drag.py  events.py  example.py  go.mod  go_ballisticcalc_test.go  index.html  (+21 more)
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
0.1/: 404.html  index.html  objects.inv  sitemap.xml
2.1.0b3/: 404.html  index.html
2.1.0b4/: index.html
2.1.0b6/: 404.html  objects.inv  sitemap.xml
2.1.0b7/: 404.html  index.html  objects.inv  sitemap.xml
2.2.0/: 404.html  objects.inv  sitemap.xml
2.2.0rc1/: 404.html  index.html  objects.inv  sitemap.xml
2.2.0rc2/: objects.inv  sitemap.xml
2.2.1/: sitemap.xml
2.2.10/: 404.html  index.html  objects.inv
2.2.11.dev1+gbbac213d6/: sitemap.xml
2.2.2/: index.html  objects.inv  sitemap.xml
2.2.3/: 404.html  index.html  objects.inv  sitemap.xml
2.2.5/: sitemap.xml
2.2.5b3.dev18+g5efbfbffb/: sitemap.xml
2.2.5rc1/: 404.html  index.html
2.2.5rc2/: 404.html  objects.inv  sitemap.xml
2.2.5rc3/: index.html  objects.inv  sitemap.xml
2.2.6/: sitemap.xml
2.2.7/: objects.inv  sitemap.xml
2.2.8/: sitemap.xml
2.2.9/: 404.html  index.html  objects.inv  sitemap.xml
2.3.0/: objects.inv  sitemap.xml
2.3.0b2/: 404.html  sitemap.xml
2.3.0b3/: index.html  sitemap.xml
2.3.0b4/: objects.inv
2.3.0b5/: sitemap.xml
2.3.0rc1/: 404.html  index.html  sitemap.xml
2.3.0rc2/: sitemap.xml
_cydataclass/: _data_repr.pxd  _data_repr.pyx
about/: index.html
aerial_target/: README.md  aerial_target.py
aerial_targets_shooting/: aerial_target.py  aerial_targets.py
assets/: .pybc-imperial.toml  .pybc-metrics.toml  .pybc-mixed.toml
benchmarks/: 20251015T083211Z_bench.json  20251015T083231Z_bench.json  20251015T083253Z_bench.json  20251015T083454Z_bench.json  20251015T083720Z_bench.json  20251015T083746Z_bench.json  20251015T084123Z_bench.json  (+48 more)
py_ballisticcalc.exts/: .gitignore  AGENTS.md  MANIFEST.in  Makefile  Manifest.in  README.md  __init__.py  pyproject.toml  setup.py  sitecustomize.py
py_ballisticcalc.exts/.old/: v3dpp.cpp  v3dpp.hpp  vector.pxd
py_ballisticcalc.exts/examples/engines/: euler_cromer_engine.pxd  euler_cromer_engine.pyx  rk45.h  rk45_engine.pyx
py_ballisticcalc.exts/py_ballisticcalc.exts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
py_ballisticcalc.exts/py_ballisticcalc_exts/: .gitignore  __init__.py  _data_repr.pxd  _early_bind_atmo.pxd  _early_bind_atmo.pyx  _early_bind_config.pxd  _early_bind_config.pyx  _test_engine.pyx  _test_error_stack.pyx  _test_helpers.pyx  base_engine.pxd  base_engine.pyi  base_engine.pyx  base_traj_seq.pxd  base_traj_seq.pyx  base_types.pxd  bclib.pxd  bind.pxd  bind.pyi  bind.pyx  conditions.pxd  conditions.pyi  conditions.pyx  cy_bindings.pxd  cy_bindings.pyx  cy_bindings.pyx.bak  cy_euler.pxd  cy_euler.pyx  early_bind_atmo.pxd  early_bind_atmo.pyx  early_bind_config.pxd  early_bind_config.pyx  error_stack.pxd  error_stack.pyx  euler_engine.pxd  euler_engine.pyi  euler_engine.pyx  exceptions.pxd  filter.pyx  helpers.pxd  (+42 more)
py_ballisticcalc.exts/py_ballisticcalc_exts/include/: __bclibc_types.hpp  base_traj_seq.h  basetraj_seq.h  bclib.h  bclibc.h  bclibc.hpp  bclibc_base_traj_seq.h  bclibc_bclib.h  bclibc_bclib.hpp  bclibc_core.h  bclibc_core.hpp  bclibc_engine.h  bclibc_engine.hpp  bclibc_error_stack.h  bclibc_euler.h  bclibc_euler.hpp  bclibc_interp.h  bclibc_interp.hpp  bclibc_log.h  bclibc_py_bind.h  bclibc_py_bind.hpp  bclibc_rk4.h  bclibc_rk4.hpp  bclibc_seq.hpp  bclibc_traj_filter.hpp  bclibc_v3d.h  bind.h  engine.h  error_stack.h  euler.h  euler_cromer.h  helpers.h  interp.h  log.h  rk4.h  state.h  tdata.h  tdatafilter.h  tflag.h  traj_data_filter.h  (+2 more)
py_ballisticcalc.exts/py_ballisticcalc_exts/include/bclibc/: base_types.hpp  engine.hpp  error_stack.h  error_stack.hpp  euler.hpp  exceptions.hpp  interp.hpp  log.h  log.hpp  py_bind.hpp  rk4.hpp  rk45.hpp  scope_guard.hpp  traj_data.hpp  traj_filter.hpp  traj_flag.hpp  traj_seq.hpp  v3d.hpp
py_ballisticcalc.exts/py_ballisticcalc_exts/src/: base_traj_seq.c  base_types.cpp  basetraj_seq.c  bclib.c  bclibc_base_traj_seq.c  bclibc_bclib.c  bclibc_bclib.cpp  bclibc_engine.c  bclibc_engine.cpp  bclibc_error_stack.c  bclibc_euler.c  bclibc_euler.cpp  bclibc_interp.c  bclibc_interp.cpp  bclibc_log.c  bclibc_py_bind.c  bclibc_py_bind.cpp  bclibc_rk4.c  bclibc_rk4.cpp  bclibc_seq.cpp  bclibc_traj_filter.cpp  bclibc_traj_filter.сpp  bclibc_v3d.c  bind.c  engine.c  engine.cpp  error_stack.c  error_stack.cpp  euler.c  euler.cpp  euler_cromer.c  filter.c  helpers.c  interp.c  interp.cpp  log.c  log.cpp  py_bind.cpp  rk4.c  rk4.cpp  (+10 more)
py_ballisticcalc.exts/reports/: cythonization.html  cythonization.md
py_ballisticcalc.exts/scripts/: cleanup.py  cython_format.py  cythonization-report.py
py_ballisticcalc.exts/tests/: README.md  bench_append_speed.py  ci_run_cython_checks.ps1  conftest.py  microbench.py  smoke_cbase_traj_seq.py  test_cbase_traj_seq.py  test_cython_edges.py  test_cython_leaks.py  test_cython_stress_memory.py  test_drag_parity_ext.py  test_engine.c  test_engine.html  test_error_stack.c  test_error_stack.html  test_error_stack.py  test_error_stack.pyx  test_get_at_functions.py  test_helpers.c  test_helpers.html  test_helpers.pyx  test_import_cython_modules.py  test_memory_leak.py  test_parity_engine.py  test_python_parity.py  test_trajectory_data_exts.py
py_ballisticcalc_exts/: Manifest.in  README.md  pyproject.toml  setup.py
py_ballisticcalc_exts/py_ballisticcalc_exts/: __init__.py  drag_model.pyi  drag_model.pyx  trajectory_calc.pyi  trajectory_calc.pyx
(+1363 files in other folders)
