# Copyright 2023 Dmytro Yaroshenko (https://github.com/o-murphy)
# Copyright 2024 David Bookstaber (https://github.com/dbookstaber)

[build-system]
requires = [
    "setuptools",
    "setuptools-scm[toml]>=10.0.5",
    "setuptools_dynamic_dependencies",
]
build-backend = "setuptools.build_meta"

[project]
name = "py_ballisticcalc"

authors = [
    { name = "o-murphy", email = "thehelixpg@gmail.com" },
    { name = "dbookstaber", email = "bookstaber@gmail.com" }
]
description = "LGPL library for small arms ballistic calculations (Python 3)"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["py_ballisticcalc", "ballistics", "Cython", "ballistic calculator", "python", "ballistic solver"]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "typing_extensions>= 4.15.0",
    "Deprecated>=1.3.1",
    "cython>=3.2.6",
    "pylint>=4.0.6",
    "scipy>=0.18.0",
]

# NOTE:
#   version: will be calculated with setuptools-scm
#   optional-dependencies: will be calculated with before-build hook
dynamic = ["version", "optional-dependencies"]

[project.entry-points.py_ballisticcalc]
euler_engine = "py_ballisticcalc:EulerIntegrationEngine"
rk4_engine = "py_ballisticcalc:RK4IntegrationEngine"
scipy_engine = "py_ballisticcalc:SciPyIntegrationEngine"
verlet_engine = "py_ballisticcalc:VelocityVerletIntegrationEngine"

[project.urls]
"Homepage" = "https://github.com/o-murphy/py-ballisticcalc"
"Documentation" = "https://o-murphy.github.io/py-ballisticcalc"
"Bug Reports" = "https://github.com/o-murphy/py-ballisticcalc/issues"
"Source" = "https://github.com/o-murphy/py-ballisticcalc"


[tool.setuptools.packages.find]
where = ["."]
include = ["py_ballisticcalc*"]

[tool.setuptools.package-data]
py_ballisticcalc = ["py.typed", "assets/*.toml"]


[project.scripts]
uconv = "py_ballisticcalc.tools.uconv:main"


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-rf"
testpaths = ["tests"]
markers = [
    "extended: rarely-modified logic",
    "engine: functionality that varies with engine",
    "stress: long-running or resource-intensive tests, opt-in only"
]

[tool.mypy]
packages = ["py_ballisticcalc"]

[tool.ruff]
include = [
    "pyproject.toml",
    "py_ballisticcalc/**/*.py",
    "py_ballisticcalc/**/*.pyi",
    "py_ballisticcalc.exts/**/*.py",
    "py_ballisticcalc.exts/**/*.pyi",
]
extend-exclude = [
    "__init__.py",
    "tests",
    "examples",
]
line-length = 120

[tool.ruff.lint]
ignore = ["F403", "F405"]

[tool.uv.sources]
"py_ballisticcalc.exts" = { path = "./py_ballisticcalc.exts" }  # required for `uv sync`

[tool.setuptools_scm]
root = "."  # required for valid .git repo root detect for main package in monorepo
fallback_version = "0.0.0.dev0"

# NOTE:
#   do not use [project.optional-dependencies]
#   we use setuptools_dynamic_dependencies as "before-build hook"
#   to guarantee strict tie of the `main` and the `exts` packages versions
[tool.setuptools_dynamic_dependencies.optional-dependencies]
exts = ["py_ballisticcalc.exts=={version}"]
charts = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "numpy>=2.5.0; python_version>='3.12'",
    "numpy>=2.4.6; python_version<'3.12'",
    "scipy>=0.18.0",
]
scipy = [
    "numpy>=2.5.0; python_version>='3.12'",
    "numpy>=2.4.6; python_version<'3.12'",
    "scipy>=0.18.0",
]
dev = [
    "cython>=3.2.6",
    "build>=1.5.0",

    # math and data
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "numpy>=2.5.0; python_version>='3.12'",
    "numpy>=2.4.6; python_version<'3.12'",
    "scipy>=0.18.0",

    # jupyter
    "ipykernel>=7.3.0",
    "nbformat>=5.10.4", # minimal installation for .ipynb for IDE (works in VS Code, PyCharm)

    # code standards
    "mypy>=2.2.0",
    "pylint>=4.0.6",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "cython-lint>=0.21.0",
    "pre-commit>=4.6.0",

    # stubs
    "scipy-stubs>=1.18.0.0; python_version>='3.12'",
    "scipy-stubs>=1.17.1.4; python_version<'3.12'",

    "types-deprecated>=1.3.1.20260520",
    "pandas-stubs>=3.0.3.260530",
]
docs = [
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs>=1.6.1",
    "mkdocs-exclude>=1.0.2",
    "mkdocs-material[imaging]>=9.7.0",
    "mkdocs-redirects>=1.2.2",
    "mkdocstrings>=1.0.6",
    "mkdocstrings-python>=2.0.5",
    "mkdocs-autorefs>=1.4.3",
    "mike>=2.2.0",
    "pydocstyle>=6.3.0",
    "mkdocs-macros-plugin>=1.3.7",
    "setuptools-scm>=10.0.5"
]

[dependency-groups]
# Keep in sync with [tool.setuptools_dynamic_dependencies.optional-dependencies] dev above.
# Use `uv sync --dev` to install.
dev = [
    "cython>=3.2.6",
    "build>=1.5.0",

    # math and data
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "numpy>=2.5.0; python_version>='3.12'",
    "numpy>=2.4.6; python_version<'3.12'",
    "scipy>=0.18.0",

    # jupyter
    "ipykernel>=7.3.0",
    "nbformat>=5.10.4", # minimal installation for .ipynb for IDE (works in VS Code, PyCharm)

    # code standards
    "mypy>=2.2.0",
    "pylint>=4.0.6",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "cython-lint>=0.21.0",
    "pre-commit>=4.6.0",

    # stubs
    "scipy-stubs>=1.18.0.0; python_version>='3.12'",
    "scipy-stubs>=1.17.1.4; python_version<'3.12'",
    
    "types-deprecated>=1.3.1.20260520",
    "pandas-stubs>=3.0.3.260530",
]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
