# Copyright 2023 Dmytro Yaroshenko (https://github.com/o-murphy)
# Copyright 2024 David Bookstaber (https://github.com/dbookstaber)

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "setuptools_dynamic_dependencies",
]
build-backend = "setuptools.build_meta"

[project]
name = "py_ballisticcalc"

authors = [
    { name = "o-murphy", email = "thehelixpg@gmail.com" },
    { name = "dbookstaber", email = "bookstaber@gmail.com" }
]
description = "LGPL library for small arms ballistic calculations (Python 3)"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["py_ballisticcalc", "ballistics", "Cython", "ballistic calculator", "python", "ballistic solver"]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "typing_extensions>= 4.15.0",
    "Deprecated>=1.3.1",
]

# NOTE:
#   version: will be calculated with setuptools-scm
#   optional-dependencies: will be calculated with before-build hook
dynamic = ["version", "optional-dependencies"]

[project.entry-points.py_ballisticcalc]
euler_engine = "py_ballisticcalc:EulerIntegrationEngine"
rk4_engine = "py_ballisticcalc:RK4IntegrationEngine"
scipy_engine = "py_ballisticcalc:SciPyIntegrationEngine"
verlet_engine = "py_ballisticcalc:VelocityVerletIntegrationEngine"

[project.urls]
"Homepage" = "https://github.com/o-murphy/py-ballisticcalc"
"Documentation" = "https://o-murphy.github.io/py-ballisticcalc"
"Bug Reports" = "https://github.com/o-murphy/py-ballisticcalc/issues"
"Source" = "https://github.com/o-murphy/py-ballisticcalc"


[tool.setuptools.packages.find]
where = ["."]
include = ["py_ballisticcalc*"]

[tool.setuptools.package-data]
py_ballisticcalc = ["py.typed", "assets/*.toml"]


[project.scripts]
uconv = "py_ballisticcalc.tools.uconv:main"


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-rf"
testpaths = ["tests"]
markers = [
    "extended: rarely-modified logic",
    "engine: functionality that varies with engine",
    "stress: long-running or resource-intensive tests, opt-in only"
]

[tool.pyright]
include = ["py_ballisticcalc"]
# __init__.py and drag_tables.py build __all__ dynamically from globals()/a
# generated list by design (DRY, avoids a hand-maintained duplicate list);
# pyright can't statically verify a non-literal __all__, hence this warning
# is expected and not actionable without abandoning that pattern.
reportUnsupportedDunderAll = false

[tool.ruff]
include = [
    "pyproject.toml",
    "py_ballisticcalc/**/*.py",
    "py_ballisticcalc/**/*.pyi",
    "py_ballisticcalc.exts/**/*.py",
    "py_ballisticcalc.exts/**/*.pyi",
]
extend-exclude = [
    "__init__.py",
    "tests",
    "examples",
    "py_ballisticcalc.exts/py_ballisticcalc_exts/external/bclibc",
]
line-length = 120

[tool.ruff.lint]
ignore = ["F403", "F405"]

[tool.pylint.main]
ignore = ["CVS", "setup.py", "tests.py"]
fail-under = 9.0
py-version = 3.11

[tool.pylint.design]
max-positional-arguments = 6

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "logging-fstring-interpolation",
    "line-too-long",
    "invalid-name",
    "too-many-locals",
    "too-many-arguments",
    "too-many-branches",
    "too-few-public-methods",
]

[tool.uv.sources]
"py_ballisticcalc.exts" = { path = "./py_ballisticcalc.exts" }  # required for `uv sync`

[tool.setuptools_scm]
root = "."  # required for valid .git repo root detect for main package in monorepo
fallback_version = "0.0.0.dev0"

# NOTE:
#   do not use [project.optional-dependencies]
#   we use setuptools_dynamic_dependencies as "before-build hook"
#   to guarantee strict tie of the `main` and the `exts` packages versions
[tool.setuptools_dynamic_dependencies.optional-dependencies]
exts = ["py_ballisticcalc.exts=={version}"]
charts = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "numpy>=2.5.0; python_version>='3.12'",
    "numpy>=2.4.6; python_version<'3.12'",
    "scipy>=1.18.0; python_version>='3.12'",
    "scipy>=1.17.1; python_version<'3.12'",
]
scipy = [
    "numpy>=2.5.0; python_version>='3.12'",
    "numpy>=2.4.6; python_version<'3.12'",
    "scipy>=1.18.0; python_version>='3.12'",
    "scipy>=1.17.1; python_version<'3.12'",
]
dev = [
    # math and data
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "numpy>=2.5.0; python_version>='3.12'",
    "numpy>=2.4.6; python_version<'3.12'",
    "scipy>=1.18.0; python_version>='3.12'",
    "scipy>=1.17.1; python_version<'3.12'",

    # jupyter
    "ipykernel>=7.3.0",
    "nbformat>=5.10.4", # minimal installation for .ipynb for IDE (works in VS Code, PyCharm)

    # code standards
    "pyright>=1.1.411",
    "pylint>=4.0.6",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.16.0",
    "cython-lint>=0.21.0", # lints py_ballisticcalc.exts/**/*.pyx; must run from root venv (pre-commit)
    "pre-commit>=4.6.0",

    # stubs
    "scipy-stubs>=1.18.0.0; python_version>='3.12'",
    "scipy-stubs>=1.17.1.5; python_version<'3.12'",

    "types-deprecated>=1.3.1.20260520",
    "pandas-stubs>=3.0.3.260530",
]
docs = [
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs>=1.6.1",
    "mkdocs-exclude>=1.0.2",
    "mkdocs-material[imaging]>=9.7.0",
    "mkdocs-redirects>=1.2.2",
    "mkdocstrings>=1.0.6",
    "mkdocstrings-python>=2.0.5",
    "mkdocs-autorefs>=1.4.3",
    "mike>=2.2.0",
    "pydocstyle>=6.3.0",
    "mkdocs-macros-plugin>=1.3.7",
    "setuptools-scm>=10.2.0",
]

[dependency-groups]
# Keep in sync with [tool.setuptools_dynamic_dependencies.optional-dependencies] dev above.
# Use `uv sync --dev` to install.
dev = [
    # math and data
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "numpy>=2.5.0; python_version>='3.12'",
    "numpy>=2.4.6; python_version<'3.12'",
    "scipy>=1.18.0; python_version>='3.12'",
    "scipy>=1.17.1; python_version<'3.12'",

    # jupyter
    "ipykernel>=7.3.0",
    "nbformat>=5.10.4", # minimal installation for .ipynb for IDE (works in VS Code, PyCharm)

    # code standards
    "pyright>=1.1.411",
    "pylint>=4.0.6",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.16.0",
    "cython-lint>=0.21.0", # lints py_ballisticcalc.exts/**/*.pyx; must run from root venv (pre-commit)
    "pre-commit>=4.6.1",

    # stubs
    "scipy-stubs>=1.18.0.0; python_version>='3.12'",
    "scipy-stubs>=1.17.1.5; python_version<'3.12'",

    "types-deprecated>=1.3.1.20260520",
    "pandas-stubs>=3.0.3.260530",
]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
